# pmud

./: pyproject.toml
mud/: main.py
mud/game/: areas.py  combat.py  mobs.py
mud/server/: __init__.py  manager.py  players.py  websocket.py
tests/: test_mud.py
