[tool.poetry]
name = "mud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
websockets = "^10.3"
uvicorn = "^0.18.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
mypy = "^0.971"
black = "^22.6.0"

[tool.poetry.scripts]
server = "mud.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
